cambio controladores para editar y ver iguales

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,9 +14,9 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Casa Irene{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
-    {% block funcion1 %}{% endblock %}
-           
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/cora.png') }}" />
+{% block funcion1 %}{% endblock %}
+
 </head>
 <body>
 
@@ -35,10 +35,10 @@
                         <ul>
                             <li><a href="{{ path ('nuestrahistoria') }}">Nuestra historia</a></li>
                             <li><a href="{{ path ('muestracarta') }}">Carta</a></li>
-                            <li><a href="{{ path ('reserva_new') }}">Reservas</a></li>
+                            <li><a href="{{ path ('reservacliente') }}">Reservas</a></li>
                             <li><a href="{{ path ('muestracomment') }}">Comentarios</a></li>
                             <li><a href="{{ path ('dondeestamos') }}">Dónde estamos</a></li>
-                            <li><a href="{{ path ('areaclientes') }}">M clientes</a></li>
+                            <li><a href="{{ path ('cliente_new') }}">M clientes</a></li>
                             <li><a href="{{ path ('tablas') }}">M Tablas</a></li>
 
                         </ul>
@@ -86,7 +86,18 @@
         </section><!--  end hero  -->
     {% endblock %}
     {% block body %}
+        {% block dentro %}
+            <div class='row'>
+                <div class="col-md-2">
+                </div>
+
+
+                <div class="col-md-4">
+                {% block medio %}{% endblock %}
+            </div>
+        </div>
     {% endblock %}
+{% endblock %}
 {% block javascripts %}{% endblock %}
 
 </body>   
