--- a/app/Resources/views/nuestrahistoria.html.twig
+++ b/app/Resources/views/nuestrahistoria.html.twig
@@ -6,6 +6,27 @@
 
         {{parent()}}
 
+
+        <div class="espacio">
+            <div class="direccion">
+             
+
+                <p>Llevamos desde 1979 innovando en el mundo de la alimentación saludable.
+                    Hoy en día, Teresa Carles Healthy Foods cuenta con más de 140 profesionales y con un equipo de I+D+i </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                    in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                    in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+
+
         {% include 'footer.html.twig' %}
 
 
