--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,9 +61,9 @@
                 <div class="col-md-2">
                     <nav>
                         <ul>
-                            <li> <a href="{{ path ('homepage') }}">ES</a></li>
-                            <li><a href="{{ path ('homepage') }}">CAT</a></li>
-                            <li><a href="{{ path ('homepage') }}">EN</a></li>
+                            <li> <a href="{{ path ('idioma',{'idioma' : 'ES'}) }}">ES</a></li>
+                            <li><a href="{{ path ('idioma',{'idioma' : 'CAT'}) }}">CAT</a></li>
+                            <li><a href="{{ path ('idioma',{'idioma' : 'ES'}) }}">EN</a></li>
                         </ul>
                     </nav>
                 </div>
